# clarity-v-

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BUILD_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  TRAINING.md  install_shortcuts.py  pyproject.toml  requirements.txt  run.pyw  wake_config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  platform_request.md
.github/workflows/: checks.yml
dictionaries/: Default.json  Python.json
models/wake_words/: README.md  cv_go.onnx  cv_go.onnx.data  cv_over.onnx  cv_over.onnx.data
packaging/: README.md  clarity_v.spec
scripts/: README.md  dev.py  download_preact.py  download_preact_umd.py  download_qweb.py  get_qwebchannel.py
src/clarity_v/: __init__.py  app.py  audio.py  buffer.py  commit.py  dictation.py  dictation_log.py  dictionary.py  filters.py  log_capture.py  sounds.py  state.py  text_processor.py  wake.py  whisper_engine.py
src/clarity_v/platform/: __init__.py  _base.py  linux_x11.py  (+2 more)
tests/: test_audio.py  test_buffer.py  test_dictation_log.py  test_dictionary.py  test_filters.py  test_presence_initialization.py  test_settings.py  test_state.py  test_text_processor.py  test_validate_deploy.py
tools/: generate_sounds.py  record_fixtures.py  run_voice_tests.py  verify_audio.py  verify_dictation.py  verify_presence.py  verify_wake.py  verify_whisper.py
tools/training/: _train_step_wrapper.py  calibrate.py  fetch_negatives.py  generate_background_noise.py  generate_samples.py  import_real_clips.py  record_personal_voice.py  requirements.txt  train.py  validate.py  wizard.py
(+14 files in other folders)
